# casadi-build

./: CMakeLists.txt  CMakePresets.json  README.md
install/casadi/: libcoinmumps.la  libipopt.la
install/casadi/cmake/: casadi-config-version.cmake  casadi-config.cmake  casadi-targets-release.cmake  casadi-targets.cmake
install/casadi/include/casadi/: config.h
install/casadi/include/casadi/core/: casadi_export.h
install/casadi/pkgconfig/: casadi.pc  coinmumps.pc  ipopt.pc  lapack.pc
install/lib/cmake/tinyxml2/: tinyxml2-static-targets-release.cmake  tinyxml2-static-targets.cmake
install/lib/pkgconfig/: tinyxml2.pc
test/: test.cpp
